2008-05-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourrotate.c: Renamed begin to start. Tidied
	to wrap at 80 columns. Added a wrapper for get_bounds.

	* clutter/rbcltbehaviouropacity.c: Added wrappers for
	{get,set}_bounds.

	* clutter/rbcltbehaviourellipse.c
	(rbclt_behaviour_ellipse_initialize): Renamed begin to start.

2008-05-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourdepth.c: Added wrappers for
	clutter_behaviour_depth_{get,set}_bounds.

2008-05-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourpath.c (rbclt_behaviour_path_init): 
	* clutter/rbcltbehaviourbspline.c (rbclt_behaviour_bspline_init):
	Added 'append' and '<<' alias for append_knot

2008-04-30  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_is_rotated): Added wrappers
	for clutter_actor_{is_rotated,is_scaled,get_stage}.

2008-04-29  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Added wrappers for methods to set the
	anchor point.

2008-04-28  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (Init_clutter): Added rbclt_shader_init

	* clutter/rbcltactor.c (rbclt_actor_set_shader)
	(rbclt_actor_shader, rbclt_actor_set_shader_param): New functions
	to wrap shader methods

	* clutter/rbcltshader.c: New wrapper for ClutterShader

	* examples/test-shader.rb: Port of test-shader.c

	* clutter/rbcltalpha.c (rbclt_alpha_initialize): ClutterAlpha
	objects are now intially unowned so the constructor has changed to
	reflect this

2008-04-27  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_get_relative_vertices): Added
	wrapper for clutter_actor_get_relative_vertices
	(rbclt_actor_should_pick_paint): Added wrapper for
	clutter_actor_should_pick_paint.

2008-04-26  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_apply_transform_to_point):
	Fixed to return the transformed vertex instead of the original
	point.
	(rbclt_actor_apply_relative_transform_to_point): New wrapper for